--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
-  <!-- Dancing Script Font link-->
+  <!-- jQuery Cycle plugin-->
   <script src="http://malsup.github.io/jquery.cycle.all.js"></script>
 </head>
 <body>
